00-k8s/booking-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: http
