00-k8s/booking-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  host: booking.skyfly.example
  to:
    kind: Service
    name: booking-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
